# lambda-package

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  Taskfile.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: code_formatting.yml  code_quality.yml  coding_style.yml  unit_tests.yml
lambda_package/: __init__.py  __main__.py  configuration.py  lambda_package.py  requirements.py
lambda_packaging/: __init__.py  __main__.py  lambda_packaging.py
test/: configuration_tests.py  lambda_package_find_paths_tests.py  lambda_package_package.py  lambda_package_tests.py  main_tests.py  package_tests.py  requirements_normalize_version_test.py  requirements_tests.py
